        ==== rnumber release 1.26.0 (v1_26_0) on Linux (cde-tx32-ldt189) on 5/9/2006 ====

        ==== rnumber release 1.26.0 (v1_26_0) on Linux (cde-tx32-ldt189) on 5/9/2006 ====

        ==== rnumber release 1.26.0 (v1_26_0) on Linux (cde-tx32-ldt189) on 5/9/2006 ====

2006-05-08  Brian Kahne  <bkahne@freescale.com>

	* Cleaned up configure.ac and the overall build environment so
	that it builds cleanly using the newest versions of the GNU Build
	System and passes "make distcheck".

	* RNumber now uses libtool.  You can call "rnumber-config
	--ltlibs" to fetch the libtool link line.  The rnumber.m4 macro
	has been modified so that it exports RNUMBER_LTLIBS, which
	contains this information.

        ===== rnumber release 1.25.2 (v1_25_2) on Linux (cde-tx32-ldt217) =====

        ========== rnumber release 1.25.2 (v1_25_2) on SunOS (sc0048) ==========

2006-01-27  Todd Dukes  <tdukes@freescale.com>

	* Random.C getInteger (unsigned n) and getUint64 (uint 64)
         - when n == 0 these functions returned  from [0:-1] instead
           of 0. These functions have been changed so that calling with
	   value of 0 will return 0.

        ========== rnumber release 1.25.1 (v1_25_1) on SunOS (sc0048) ==========

        ========== rnumber release 1.25.1 (v1_25_1) on SunOS (sc0048) ==========

        ===== rnumber release 1.25.1 (v1_25_1) on Linux (cde-tx32-ldt217) =====

2005-12-02  Todd Dukes  <tdukes@freescale.com>

	* builds and tests ok with gcc 3.4.3

        ========== rnumber release 1.24.3 (v1_24_3) on SunOS (sc0048) ==========

        ===== rnumber release 1.24.3 (v1_24_3) on Linux (cde-tx32-ldt217) =====

        ===== rnumber release 1.24.2 (v1_24_2) on Linux (cde-tx32-ldt217) =====

2005-11-21  Todd Dukes  <tdukes@freescale.com>

	* bigloo 2.7a released. Merged changes from
	  split-for-bigloo-2_7a-beta branch back into the main
	  tree.

2005-11-18  Todd Dukes  <tdukes@freescale.com>

	* Changes for the 17Nov05 bigloo beta.
